--- a/Dot98/Storyboards/Dot98/Storyboards/Base.lproj/SideMenu.storyboard
+++ b/Dot98/Storyboards/Dot98/Storyboards/Base.lproj/SideMenu.storyboard
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AOt-et-Mpi">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -7,12 +8,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Side Menu Table View Controller-->
         <scene sceneID="MUC-oR-x8s">
             <objects>
-                <viewController id="dC3-l8-nTu" customClass="ViewController" customModule="Dot98" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="dC3-l8-nTu" customClass="SideMenuTableViewController" customModule="Dot98" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NVe-xv-xLS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OHt-q2-cjs">
@@ -30,6 +31,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Wg1-ZE-eZM"/>
+                    <connections>
+                        <outlet property="chaptersTableView" destination="OHt-q2-cjs" id="jKI-Ex-rmH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vsg-wu-Kvw" sceneMemberID="firstResponder"/>
             </objects>
