--- a/Dot98/Storyboards/Dot98/Storyboards/Base.lproj/SideMenu.storyboard
+++ b/Dot98/Storyboards/Dot98/Storyboards/Base.lproj/SideMenu.storyboard
@@ -19,6 +19,16 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OHt-q2-cjs">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChapterCell" id="pPi-Av-BM5">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pPi-Av-BM5" id="zfu-XQ-oKm">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ZeX-Cj-7te"/>
@@ -32,7 +42,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Wg1-ZE-eZM"/>
                     <connections>
-                        <outlet property="chaptersTableView" destination="OHt-q2-cjs" id="jKI-Ex-rmH"/>
+                        <outlet property="chaptersTableView" destination="OHt-q2-cjs" id="rT3-86-fVV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vsg-wu-Kvw" sceneMemberID="firstResponder"/>
