setting stop for refactor

--- a/Dot98/Storyboards/Base.lproj/MainDisplay.storyboard
+++ b/Dot98/Storyboards/Base.lproj/MainDisplay.storyboard
@@ -17,15 +17,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="knc-TY-puQ">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="knc-TY-puQ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TVCell" id="eXS-UH-h9Q">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eXS-UH-h9Q" id="HV7-QL-msW">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -38,16 +38,61 @@
                             <constraint firstItem="knc-TY-puQ" firstAttribute="leading" secondItem="rrb-L3-SAK" secondAttribute="leading" id="Drn-Ft-op8"/>
                             <constraint firstAttribute="bottom" secondItem="knc-TY-puQ" secondAttribute="bottom" id="Ro3-D4-Sod"/>
                             <constraint firstItem="knc-TY-puQ" firstAttribute="trailing" secondItem="rrb-L3-SAK" secondAttribute="trailing" id="hhE-Qp-ePG"/>
-                            <constraint firstItem="knc-TY-puQ" firstAttribute="top" secondItem="rrb-L3-SAK" secondAttribute="top" id="reC-aK-5yZ"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="menuTableView" destination="knc-TY-puQ" id="lKA-JA-72C"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t95-CN-pwx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="126" y="94"/>
+            <point key="canvasLocation" x="1050.7246376811595" y="769.41964285714278"/>
+        </scene>
+        <!--Sections View Controller-->
+        <scene sceneID="Wy3-4a-Rqz">
+            <objects>
+                <viewController storyboardIdentifier="SectionsViewController" id="ybX-NA-fgc" customClass="SectionsViewController" customModule="Dot98" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Yy4-aH-Blp">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dOa-fb-omB">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SectionCell" id="lq8-sx-4Hj">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lq8-sx-4Hj" id="CCX-MK-bz3">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="ybX-NA-fgc" id="sab-rg-WQW"/>
+                                    <outlet property="delegate" destination="ybX-NA-fgc" id="d7Y-Ax-FGX"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ymz-9e-M0p"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="dOa-fb-omB" firstAttribute="leading" secondItem="Ymz-9e-M0p" secondAttribute="leading" id="QRl-E6-p3J"/>
+                            <constraint firstAttribute="bottom" secondItem="dOa-fb-omB" secondAttribute="bottom" id="bbw-v5-esG"/>
+                            <constraint firstItem="dOa-fb-omB" firstAttribute="top" secondItem="Ymz-9e-M0p" secondAttribute="top" id="niu-Ad-srb"/>
+                            <constraint firstItem="dOa-fb-omB" firstAttribute="trailing" secondItem="Ymz-9e-M0p" secondAttribute="trailing" id="zwg-JV-EJb"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="sectionsTableView" destination="dOa-fb-omB" id="i1S-2T-h7r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="APK-7b-XWB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1760.8695652173915" y="769.41964285714278"/>
         </scene>
         <!--DisplayViewController-->
         <scene sceneID="tne-QT-ifu">
